Updated error handling for Saved Itinerary